name:          OOHaskell
category:      Language
version:       0.1.0.0
homepage:      http://code.haskell.org/OOHaskell/
license:       MIT
license-file:  LICENSE
author:        Oleg Kiselyov, Ralf Laemmel, Keean Schupke
maintainer:    nikita@karetnikov.org, nkaretnikov@ptsecurity.com
copyright:     2004 Oleg Kiselyov, Ralf Laemmel, Keean Schupke
build-type:    Simple
cabal-version: >=1.10
synopsis:      Haskell's overlooked object system
-- description:         

extra-source-files:
  ChangeLog,
  README

source-repository head
  type:     git
  location: https://github.com/nkaretnikov/OOHaskell

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  exposed-modules:
    DeepNarrow,
    Dynamic,
    New,
    Nominal,
    OOHaskell,
    Print,
    SMRFix

    -- Haskell.Shapes8.Shape,
    -- Haskell.Shapes8.Polymorph,
    -- Haskell.Shapes8.Rectangle,
    -- Haskell.Shapes8.Circle,
    -- Haskell.Shapes3.Shape,
    -- Haskell.Shapes3.Polymorph,
    -- Haskell.Shapes3.Existential,
    -- Haskell.Shapes3.Rectangle,
    -- Haskell.Shapes3.Circle,
    -- Haskell.Shapes4.Shape,
    -- Haskell.Shapes4.ObjConstructionP,
    -- Haskell.Shapes4.Polymorph,
    -- Haskell.Shapes4.Existential,
    -- Haskell.Shapes4.Rectangle,
    -- Haskell.Shapes4.ObjConstructionS,
    -- Haskell.Shapes4.Circle,
    -- Haskell.Shapes4.SMFix,
    -- Haskell.Shapes7.Shape,
    -- Haskell.Shapes7.Implicit1,
    -- Haskell.Shapes7.Implicit2,
    -- Haskell.Shapes7.Existential1,
    -- Haskell.Shapes7.Polymorph,
    -- Haskell.Shapes7.Existential,
    -- Haskell.Shapes7.Rectangle,
    -- Haskell.Shapes7.Heterogeneous,
    -- Haskell.Shapes7.Circle,
    -- Haskell.Shapes6.Shape,
    -- Haskell.Shapes6.Polymorph,
    -- Haskell.Shapes6.Rectangle,
    -- Haskell.Shapes6.Subtype,
    -- Haskell.Shapes6.Circle,
    -- Haskell.Shapes2.Shape,
    -- Haskell.Shapes2.Polymorph,
    -- Haskell.Shapes2.Existential,
    -- Haskell.Shapes2.Rectangle,
    -- Haskell.Shapes2.Circle,
    -- Haskell.Shapes5.Shape,
    -- Haskell.Shapes5.ConsEither,
    -- Haskell.Shapes5.Polymorph,
    -- Haskell.Shapes5.Inference,
    -- Haskell.Shapes5.Existential,
    -- Haskell.Shapes5.Rectangle,
    -- Haskell.Shapes5.Heterogeneous,
    -- Haskell.Shapes5.Circle,
    -- Haskell.Shapes1.Shape,
    -- Haskell.Shapes1.Polymorph,
    -- Haskell.Rathman.Shape,
    -- Haskell.Rathman.Polymorph,
    -- Haskell.Rathman.Rectangle,
    -- Haskell.Rathman.Circle,
    -- Upcast1,
    -- ShapesBase,
    -- Shapes,
    -- Doors,
    -- LocalSigs,
    -- RecList,
    -- SelfReturn,
    -- CovariantReturn,
    -- CovariantArgs,
    -- SelfishSafe,
    -- CircBuffer,
    -- ShapesExists,
    -- ShapesEither,
    -- DeepSubtyping,
    -- SimpleST,
    -- OCamlTutorial,
    -- DynamicOo,
    -- Family,
    -- TwoTables,
    -- OoCopy,
    -- NominalTest,
    -- DML,
    -- ShapesGlb,
    -- EiffelFaqLcon,
    -- MultipleInheritance,
    -- ShapesHList,
    -- ShapesEitherR,
    -- Selfish,
    -- ShapesNarrow
  -- other-modules:       
  build-depends:
    base  >=4.8 && <4.9,
    array >=0.5 && <0.6,
    HList
